<resources>
    <string name="app_name">Candy</string>
    <string name="action_settings">Settings</string>
    <string name="login">アカウントをお持ちの方はこちら</string>
    <string name="str_login">ログイン</string>
    <string name="start">はじめる</string>
    <string name="app_name_login">ログインフォーム</string>
    <string name="label_email">メールアドレス</string>
    <string name="hint_email"> メールアドレス </string>
    <string name="label_password">パスワード</string>
    <string name="hint_password"> パスワード </string>
    <string name="login_hyper_link_forgot_password"><u>パスワードを忘れたら</u></string>
    <string name="activity_login_register"> 新規登録はこちら </string>
    <string name="label_re_issue_password">パスワードを忘れた方</string>
    <string name="btn_re_issue_password">パスワードを再発行</string>
    <string name="dialog_reissue_pw_hint_email"> メールアドレス </string>
    <string name="home_title">女の子一覧</string>
    <string name="error_incorrect_email_or_password"> メールアドレスまたは\nパスワードが正しくありません </string>
    <string name="start_page_dialog_title">利用規約</string>
    <string name="start_page_dialog_start">はじめる</string>
    <string name="start_page_not_accept_term">  同意しない</string>
    <string name="start_page_accept_term">同意する</string>
    <string name="block_list_screen_title">ブロックリスト</string>
    <string name="back_again_to_quit_app">もう一度押すとアプリが終了します</string>
    <string name="age">%d歳</string>
    <string name="name_search">名前検索</string>
    <string name="new_search">新人検索</string>
    <string name="chat_state">通話状態</string>
    <string name="standby">通話待ち</string>
    <string name="chat">通話中</string>
    <string name="search_in_this_condition">この条件で検索する</string>
    <string name="name_search_hint">*名前</string>
    <string name="is_new">新人</string>
    <string name="area_undefined">指定なし</string>
    <string name="no_content_performer_message">検索しましたが該当の女性は見つかりませんでした</string>
    <string name="no_content_blog_message">投稿しているブログはありません</string>
    <string name="no_content_follow_message">まだお気に入りがいません</string>
    <string name="no_content_footprint">自身のプロフィールを閲覧した女性がいません</string>
    <string name="no_content_block_message">ブロックしている女性はいません</string>
    <string name="name_random_video_call">ランダム通話</string>
    <string name="message_short_random_video_call">ランダム通話</string>
    <string name="dialog_search_age_title">年齢検索</string>
    <string name="dialog_search_age_hint">22 - 45 歳</string>
    <string name="dialog_search_age">歳</string>
    <string name="dialog_search_age_checkbox">ひみつを含む</string>
    <string name="dialog_search_recommended_girls">オススメの女の子</string>
    <string name="dialog_search_live_distributed">LIVE配信中</string>
    <string name="back">もどる</string>
    <string name="pts">pts</string>
    <string name="live">LIVE</string>
    <string name="favorite">趣味</string>
    <string name="blood">血液型</string>
    <string name="infrested_time">出没時間</string>
    <string name="my_type">性格</string>
    <string name="job">職業</string>
    <string name="tall">身長</string>
    <string name="area">地域検索</string>
    <string name="year">年</string>
    <string name="month">月</string>
    <string name="day">日</string>
    <string name="block_and_report">通報またはブロック</string>
    <string name="close">閉じる</string>
    <string name="performer_detail_tab_basic_info">プロフィール</string>
    <string name="performer_detail_tab_blog">ブログ(%d)</string>
    <string name="performer_detail_call">ビデオ通話</string>
    <string name="performer_detail_message">メッセージ</string>
    <string name="house">住まい</string>
    <string name="search_no_value">検索しましたが該当の女性は見つかりませんでした</string>
    <string name="comment_not_entered">コメントが入力されていません</string>
    <string name="get_free_point_success"> 認証が完了しました。 無料ポイントをご利用ください</string>
    <string name="not_registered_notice">まだ登録されていません</string>
    <string name="colon"> : </string>
    <string name="performer_tall">160cm</string>
    <string name="infrested_time_text">夕方</string>
    <string name="performer_job">働く引きこもりです。</string>
    <string name="performer_favorite">プロ野球観戦・バス釣り・ＵＭＡ・心霊・都市伝説・未確認事件・ゲーム</string>
    <string name="performer_my_type">おっとり系？のんびりしてるねってよく言われます(*´꒳`*)</string>
    <string name="performer_private">ひみつ</string>
    <string name="performer_short_message">この髪色今日で見納めやで〜笑</string>
    <string name="peep_video_string">のぞき</string>
    <string name="performer_age">34歳</string>
    <string name="next">次へ</string>
    <string name="edit_profile">edit profile</string>
    <string name="menu_main_screen_title">メニュー</string>
    <string name="menu_main_button_point_text">+ 追加</string>
    <string name="menu_sum_points">所持ポイント：</string>
    <string name="menu_profile">プロフィール</string>
    <string name="menu_point">ポイント購入</string>
    <string name="menu_message">メッセージ</string>
    <string name="menu_notification">通知設定</string>
    <string name="menu_footprint">足あと</string>
    <string name="menu_favorite">お気に入り</string>
    <string name="menu_block">ブロック一覧</string>
    <string name="menu_guide_usage">遊び方</string>
    <string name="menu_guide_fee">料金説明</string>
    <string name="menu_term">利用規約</string>
    <string name="menu_private_policy">プライバシーポリシー</string>
    <string name="menu_faq">お問い合わせ</string>
    <string name="menu_logout">ログアウト</string>
    <string name="menu_logout_underline"><u>ログアウト</u></string>
    <string name="menu_faq2">よくある質問</string>
    <string name="menu_mission">ミッション</string>
    <string name="menu_message_unread_number">86</string>
    <string name="menu_commerce_setting">特定商取引</string>
    <string name="profile_registration">プロフィール登録</string>
    <string name="profile_registration_prohibited_words">禁止語句が含まれているため\n送信できません</string>
    <string name="profile_reg_ask_your_name">お名前はなんてお呼びしたらいいですか ?</string>
    <string name="profile_reg_ask_your_name_hint">お名前(ハンドルネーム)※全角10文字まで</string>
    <string name="profile_reg_ask_your_old">おいくつですか ?</string>
    <string name="my_profile_title">プロフィール</string>
    <string name="profile_public_info">公開情報</string>
    <string name="profile_nick_name">ハンドルネーム</string>
    <string name="profile_job">職業</string>
    <string name="profile_type_women">タイプの女性</string>
    <string name="profile_pet">ペットを飼っていますか？</string>
    <string name="profile_geek">何オタク？</string>
    <string name="profile_onlyOneWish">ひとつだけ願いが叶うとしたら？</string>
    <string name="profile_engrossed"> 今ハマっていることは？</string>
    <string name="profile_image_title">プロフィール画像</string>
    <string name="profile_name_format">※3～10文字以内で入力してください</string>
    <string name="profile_job_format">※32文字以下で入力してください</string>
    <string name="profile_type_women_format">※20文字以下で入力してください</string>
    <string name="profile_pet_format">※20文字以下で入力してください</string>
    <string name="profile_geek_format">※20文字以下で入力してください</string>
    <string name="profile_oneWish_format">※20文字以下で入力してください</string>
    <string name="profile_engrossed_format">※20文字以下で入力してください</string>
    <string name="name_empty_message">名前が入カされていません。</string>
    <string name="profile_age">年齢</string>
    <string name="profile_blood">血液型</string>
    <string name="profile_area">お住まい</string>
    <string name="profile_message">コメント</string>
    <string name="profile_private_info">非公開情報</string>
    <string name="profile_code">会員CODE</string>
    <string name="profile_current_point">現在ポイント</string>
    <string name="profile_mail">メールアドレス</string>
    <string name="profile_mail_part">アカウント引継ぎ</string>
    <string name="profile_mail_note">※未設定のままだと機種変更などでアカウント\n情報は引き継がれません</string>
    <string name="profile_message_format">※全角50文字、改行･タグ使用不可</string>
    <string name="profile_can_be_changed_later">プロフィールは後から変更できます。</string>
    <string name="profile_comment_hint">はじめまして! %sといいます。よろしくお願…</string>
    <string name="profile_name_hint"> たかし</string>
    <string name="profile_job_hint">Job</string>
    <string name="profile_event_text_format">イベント 1分%dpts</string>
    <string name="update_profile_success">プロフィールを更新しました。</string>
    <string name="update_profile_unsuccess">ブロフィールの更新に失敗しました</string>
    <string name="confirm_pass_not_match">パスワードと確認用パスワードが一致しません</string>
    <string name="change_email_screen_title">メールアドレス設定</string>
    <string name="change_email_new_email">メールアドレス</string>
    <string name="change_email_new_password">パスワード</string>
    <string name="change_email_confirm_new_password">パスワード確認</string>
    <string name="change_email_save_editted">メールアドレス登録</string>
    <string name="str_send_pwd_to_email">メールを送信しました</string>
    <string name="favorite_screen_title">お気に入り</string>
    <string name="favorite_chat">メッセージする</string>
    <string name="remove_performer_favorite_title">この女性をお気に入りから削除しますか？</string>
    <string name="notice_delete_finish">削除しました。</string>
    <string name="favorite_delete">削除</string>
    <string name="btn_delete_message">削除</string>
    <string name="title_dialog_delete_message">メッセージを削除します。\nよろしいですか？</string>
    <string name="btn_no_jp">いいえ</string>
    <string name="btn_yes_jp">はい</string>
    <string name="recent_message">たった今</string>
    <string name="meimei_san">みいみい♡</string>
    <string name="from_person">さんから</string>
    <string name="blocked_performer_unblock">解除</string>
    <string name="block_user_notice">ブロック</string>
    <string name="block_this_user_notice">このユーザーをブロック</string>
    <string name="block_user_message">ユーザーをブロックすると以下の制限を行います\n
        ・このユーザーのブログ記事を表示しない\n
        ・このユーザーを女の子一覧に表示しない\n
        ・このユーザーのメッセージを受け付けない
    </string>
    <string name="block_this_user">ブロックする</string>
    <string name="report_this_user">通報する</string>
    <string name="guide_violation_reason">理由</string>
    <string name="guide_report_performer">規約に違反している配信が確認できた場合は、\nこちらより情報を入力してください。</string>
    <string name="block_reason_not_violation">違反報告をしない</string>
    <string name="block_reason_sex">性的なコンテンツ</string>
    <string name="block_reason_image">暴力的な画像</string>
    <string name="block_reason_discriminatory">差別的または攻撃的な内容</string>
    <string name="block_reason_other_issues">その他の問題</string>
    <string name="block_reason_comment_guide">コメント (100文字以内)</string>
    <string name="block_reason_comment_hint">こちらに詳細を入力して下さい</string>
    <string name="block_reason_report">通報</string>
    <string name="block_reason_principle">※規約に違反していることが確認でき次第対処します。</string>
    <string name="confirm_dialog_message_del_un_favorite">この女性をブロック解除しますか？</string>
    <string name="report_screen_title">ブロック/通報</string>
    <string name="confirm_dialog_default_cancel">しない</string>
    <string name="confirm_dialog_default_ok">解除する</string>
    <string name="delete">削除する</string>
    <string name="confirm_dialog_message_block">ブロックしますか？</string>
    <string name="confirm_dialog_message_report">通報しますか？</string>
    <string name="notice_dialog_message_block_success">ブロックしました。\n今後この女性は表示されません。</string>
    <string name="notice_dialog_message_report_success">事務局へ通報しました。\nご協力ありがとうございます。</string>
    <string name="notice_dialog_default_ok">OK</string>
    <string name="report_user_notice">通報</string>
    <string name="date_and_time">【開催日時】</string>
    <string name="event_content">【イベント内容】</string>
    <string name="title">Title</string>
    <string name="message">Message</string>
    <string name="campaign_title">期間限定半額キャンペーン</string>
    <string name="campaign_date_time">10月26日(水) 午前0時以降に購入履歴がある会員様</string>
    <string name="campaign_evemt_content">
        チャット終了後に詳細ページ内のフォームからご申請頂くと、直前のチャットでの消費ポイントの30％が還ってきます！</string>
    <string name="fragment_step1_txt1">１分でわかるCandyの使い方</string>
    <string name="fragment_step1_txt2">この度は Candy をダウンロードして頂きありがとうございます！</string>
    <string name="fragment_step1_txt3">Candyは、メッセージや音声通話・ビデオ通話を通じて、相手と仲良く楽しくお話をすることができるアプリです。</string>
    <string name="go_to_main_screen">お相手を選ぶページに移動する</string>
    <string name="go_to_get_free_point">無料ポイントをGETする</string>
    <string name="fragment_step_7_txt1">おつかれさまでした♪</string>
    <string name="fragment_step_7_txt2">以上で基本的な操作の説明は終了です。\nそれでは Candy で好みの方と素敵な時間をお過ごしください☆ \n\n今ならSMSメッセージを受け取るだけで、無料ポイントをプレゼントして いますので、ぜひご利用くださいね＾＾</string>
</resources>