<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ct_end_main_tut"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView11"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/common_size_16dp"
        android:gravity="center_horizontal"
        android:text="@string/fragment_step_7_txt1"
        android:textColor="@color/tutorial_btn_pink"
        android:textSize="@dimen/tutorial_commnon_text_size"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView11"
        android:layout_marginTop="16dp"
        android:text="@string/fragment_step_7_txt2"
        android:textColor="@color/white"
        android:textSize="@dimen/tutorial_commnon_text_size" />

    <Button
        android:id="@+id/btn_sms_authen"
        android:layout_width="match_parent"
        android:layout_height="@dimen/tutorial_common_button_height"
        android:layout_above="@+id/btn_goto_main"
        android:layout_marginBottom="@dimen/common_size_10dp"
        android:background="@drawable/tutorial_button"
        android:text="@string/go_to_get_free_point"
        android:textColor="@color/white"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btn_goto_main"
        android:layout_width="match_parent"
        android:layout_height="@dimen/tutorial_common_button_height"
        android:layout_alignParentBottom="true"
        android:background="@drawable/tutorial_button_green_blue"
        android:text="@string/go_to_main_screen"
        android:textColor="@color/white"
        android:textStyle="bold" />
</RelativeLayout>