<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/iv_campaign"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:contentDescription="@string/app_name"
        android:src="@drawable/event_now" />

    <TextView
        android:id="@+id/tv_campaign_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/iv_campaign"
        android:layout_centerHorizontal="true"
        android:layout_margin="@dimen/large_padding"
        android:text="@string/campaign_title"
        android:textStyle="bold"
        android:textColor="@color/color_campaign_title"
        android:textSize="@dimen/text_size_big" />

    <View
        android:id="@+id/campaign_title_divider"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_below="@id/tv_campaign_title"
        android:layout_marginLeft="@dimen/medium_padding"
        android:layout_marginRight="@dimen/medium_padding"
        android:background="@color/color_campaign_title_divider" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/campaign_title_divider"
        android:layout_margin="@dimen/large_padding">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date_and_time"
                android:textStyle="bold"
                android:textColor="@android:color/white"
                android:layout_marginTop="@dimen/medium_padding" />

            <TextView
                android:id="@+id/tv_date_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/campaign_date_time"
                android:textColor="@android:color/white"
                android:layout_marginTop="@dimen/small_padding"
                android:layout_marginStart="@dimen/medium_padding"
                android:layout_marginEnd="@dimen/small_padding" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/event_content"
                android:textStyle="bold"
                android:textColor="@android:color/white"
                android:layout_marginTop="@dimen/activity_vertical_margin" />

            <TextView
                android:id="@+id/tv_event_content"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/campaign_evemt_content"
                android:textColor="@android:color/white"
                android:layout_marginTop="@dimen/small_padding"
                android:layout_marginStart="@dimen/medium_padding"
                android:layout_marginEnd="@dimen/small_padding" />
        </LinearLayout>
    </ScrollView>
</RelativeLayout>