<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/common_size_16dp"
        android:gravity="center"
        android:text="@string/fragment_step1_txt1"
        android:textColor="@color/tutorial_btn_pink"
        android:textSize="@dimen/tutorial_commnon_text_size"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView4"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/common_size_20dp"
        android:text="@string/fragment_step1_txt2"
        android:textColor="@color/white"
        android:textSize="@dimen/tutorial_commnon_text_size" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btn_next"
        android:layout_below="@+id/textView5"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/common_size_20dp"
        android:text="@string/fragment_step1_txt3"
        android:textColor="@color/white"
        android:textSize="@dimen/tutorial_commnon_text_size" />

    <Button
        android:id="@+id/btn_next"
        android:layout_width="match_parent"
        android:layout_height="@dimen/tutorial_common_button_height"
        android:layout_alignParentBottom="true"
        android:background="@drawable/tutorial_button"
        android:text="@string/next"
        android:textColor="@color/white"
        android:textSize="@dimen/tutorial_commnon_text_size"
        android:textStyle="bold" />
</RelativeLayout>