<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fffafe"
    tools:context="com.candy.android.fragment.ReportPerformerFragment">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!--View to scrollview focus on top-->
            <View
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:focusable="true"
                android:focusableInTouchMode="true">

                <requestFocus />
            </View>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/common_size_16dp"
                android:text="@string/block_user_notice"
                android:textSize="@dimen/common_text_size_14sp"
                android:textColor="@color/text_color_profile"
                android:textStyle="bold" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/default_divider_size"
                android:background="@color/divider_custom_color_4" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:orientation="vertical"
                android:paddingStart="@dimen/common_size_16dp"
                android:paddingEnd="@dimen/common_size_16dp"
                android:paddingTop="@dimen/common_size_24dp"
                android:paddingBottom="@dimen/common_size_24dp"
                android:visibility="visible">

                <CheckBox
                    android:id="@+id/cb_block_user"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="@dimen/common_size_16dp"
                    android:button="@drawable/ic_checkbox"
                    android:text="@string/block_this_user_notice"
                    android:textSize="@dimen/text_size_medium"
                    android:textColor="@color/text_color_default" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/common_size_16dp"
                    android:text="@string/block_user_message"
                    android:textColor="@color/text_color_profile_3"
                    android:textSize="@dimen/common_text_size_12sp"/>

                <TextView
                    android:id="@+id/btn_block_performer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/common_size_16dp"
                    android:padding="@dimen/common_size_16dp"
                    android:background="@drawable/bg_btn_block"
                    android:text="@string/block_this_user"
                    android:textColor="@color/text_color_btn_block"
                    android:textSize="@dimen/common_text_size_16sp"
                    android:textStyle="bold"
                    android:gravity="center_horizontal"
                    android:enabled="false"/>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/default_divider_size"
                android:background="@color/divider_custom_color_4" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/common_size_16dp"
                android:text="@string/report_user_notice"
                android:textSize="@dimen/common_text_size_14sp"
                android:textColor="@color/text_color_profile"
                android:textStyle="bold" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/default_divider_size"
                android:background="@color/divider_custom_color_4" />

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/common_size_16dp"
                android:background="@color/white"
                android:focusableInTouchMode="true"
                android:focusable="true">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/guide_report_performer"
                    android:textSize="@dimen/text_size_medium"
                    android:textColor="@color/text_color_profile_3" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/default_divider_size"
                    android:layout_marginBottom="@dimen/common_size_16dp"
                    android:layout_marginTop="@dimen/common_size_16dp"
                    android:background="@color/divider_custom_color_4" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/guide_violation_reason"
                    android:textSize="@dimen/common_text_size_14sp"
                    android:textColor="@color/text_color_profile" />

                <RadioGroup
                    android:id="@+id/report_subject_selection"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/common_size_28dp"
                    android:layout_marginBottom="@dimen/common_size_28dp"
                    android:layout_marginStart="@dimen/common_size_4dp"
                    android:checkedButton="@+id/cb_block_reason_default"
                    android:visibility="visible">

                    <RadioButton
                        android:id="@id/cb_block_reason_default"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingStart="@dimen/common_size_16dp"
                        android:button="@drawable/custom_radio_button"
                        android:text="@string/block_reason_sex"
                        android:textSize="@dimen/text_size_medium"
                        android:textColor="@color/text_color_profile_3" />

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/common_size_16dp"
                        android:paddingStart="@dimen/common_size_16dp"
                        android:button="@drawable/custom_radio_button"
                        android:text="@string/block_reason_image"
                        android:textSize="@dimen/text_size_medium"
                        android:textColor="@color/text_color_profile_3" />

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/common_size_16dp"
                        android:paddingStart="@dimen/common_size_16dp"
                        android:button="@drawable/custom_radio_button"
                        android:text="@string/block_reason_discriminatory"
                        android:textSize="@dimen/text_size_medium"
                        android:textColor="@color/text_color_profile_3" />

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/common_size_16dp"
                        android:paddingStart="@dimen/common_size_16dp"
                        android:button="@drawable/custom_radio_button"
                        android:text="@string/block_reason_other_issues"
                        android:textSize="@dimen/text_size_medium"
                        android:textColor="@color/text_color_profile_3" />
                </RadioGroup>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:text="@string/block_reason_comment_guide"
                    android:textSize="@dimen/common_text_size_14sp"
                    android:textColor="@color/text_color_profile" />

                <EditText
                    android:id="@+id/edt_block_message"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/common_size_16dp"
                    android:background="@drawable/bg_edit_text"
                    android:gravity="top"
                    android:hint="@string/block_reason_comment_hint"
                    android:textSize="@dimen/common_text_size_14sp"
                    android:textColor="@color/text_color_profile"
                    android:textColorHint="@color/common_hint_color_timberwolf"
                    android:lines="4"
                    android:maxLength="100"/>

                <TextView
                    android:id="@+id/btn_do_report"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/common_size_16dp"
                    android:layout_marginTop="@dimen/common_size_24dp"
                    android:padding="@dimen/common_size_16dp"
                    android:background="@drawable/bg_btn_pink"
                    android:text="@string/report_this_user"
                    android:textSize="@dimen/common_text_size_16sp"
                    android:textColor="@android:color/white"
                    android:textStyle="bold"
                    android:gravity="center_horizontal"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/common_size_8dp"
                    android:text="@string/block_reason_principle"
                    android:textSize="@dimen/common_text_size_11sp"
                    android:textColor="#ff483b52" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/default_divider_size"
                android:background="@color/divider_custom_color_4" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/common_size_40dp" />

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

    <FrameLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/white"
        android:visibility="gone">

        <include layout="@layout/custom_toolbar" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/default_divider_size"
            android:background="@color/divider_custom_color_4"
            android:layout_gravity="bottom"/>

    </FrameLayout>

</RelativeLayout>
