<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/bg_white_round_corner"
        android:padding="@dimen/dialog_confirm_padding">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/medium_padding"
            android:gravity="start"
            android:textColor="@color/text_color_default"
            android:textStyle="bold"
            android:text="@string/title" />

        <TextView
            android:id="@+id/tv_message"
            android:layout_below="@id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:textColor="@color/text_color_default"
            android:text="@string/message" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_message"
            android:layout_marginTop="@dimen/dialog_content_padding"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/btn_cancel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/dialog_confirm_button_margin"
                android:layout_weight="1"
                android:background="@drawable/bg_cancel_grey"
                android:gravity="center_horizontal"
                android:padding="@dimen/dialog_content_padding"
                android:text="@string/confirm_dialog_default_cancel"
                android:textColor="@color/dialog_grey" />

            <TextView
                android:id="@+id/btn_ok"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dialog_confirm_button_margin"
                android:layout_weight="1"
                android:background="@drawable/bg_btn_pink"
                android:gravity="center"
                android:padding="@dimen/dialog_content_padding"
                android:text="@string/confirm_dialog_default_ok"
                android:textColor="@android:color/white" />
        </LinearLayout>
    </RelativeLayout>
</FrameLayout>